--- a/helm/service-s-chart/templates/service-s.yaml
+++ b/helm/service-s-chart/templates/service-s.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-s-{{ .Values.version | replace "." "-" }}
+  name: shared-app-service-s-{{ .Values.version | replace "." "-" }}
   labels:
-    app: service-s-{{ .Values.version | replace "." "-" }}
+    app: shared-app-service-s-{{ .Values.version | replace "." "-" }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app: service-s-{{ .Values.version | replace "." "-" }}
+      app: shared-app-service-s-{{ .Values.version | replace "." "-" }}
   template:
     metadata:
       labels:
-        app: service-s-{{ .Values.version | replace "." "-" }}
+        app: shared-app-service-s-{{ .Values.version | replace "." "-" }}
     spec:
       serviceAccountName: ecr-access-sa
       containers:
-        - name: service-s-{{ .Values.version | replace "." "-" }}
+        - name: shared-app-service-s-{{ .Values.version | replace "." "-" }}
           image: 495599745704.dkr.ecr.ap-southeast-2.amazonaws.com/shared-app-service-s:{{ .Values.version }}
           ports:
             - containerPort: 80
@@ -24,12 +24,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-s-{{ .Values.version | replace "." "-" }}
+  name: shared-app-service-s-{{ .Values.version | replace "." "-" }}
   labels:
-    app: service-s-{{ .Values.version | replace "." "-" }}
+    app: shared-app-service-s-{{ .Values.version | replace "." "-" }}
 spec:
   selector:
-    app: service-s-{{ .Values.version | replace "." "-" }}
+    app: shared-app-service-s-{{ .Values.version | replace "." "-" }}
   ports:
     - name: http
       port: 80
