--- a/helm/service-s-chart/templates/service-s.yaml
+++ b/helm/service-s-chart/templates/service-s.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: shared-app-service-s-{{ .Values.version | replace "." "-" }}
           image: 495599745704.dkr.ecr.ap-southeast-2.amazonaws.com/shared-app-service-s:{{ .Values.version }}
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
 ---
